monticore-generator/src/test/resources/cocos/invalid/A4037/A4037.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4037;

grammar A4037 extends mc.grammars.types.TestTypes{

  symbol A = Name;

 // C = Name;

  B = g:Name@C;
}
